# wildfire-smoke-risk-correlator

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
config/: census.yaml  runbooks.yaml  sources.yaml
docs/: getting-started.md  index.md
scripts/: assert_integration_state.sh  bootstrap_db.sh  calibration_demo.sh  calibration_summary.sh  check_alerts.sh  collect_kafka_lag.sh  compact_parse_errors.sh  create_kafka_topics.sh  db_doctor.sh  demo_local.sh  dispersion_demo.sh  dlq_smoke_test.sh  download_census_boundaries.sh  evaluate_risk_model.sh  export_calibration.sh  grid_weather_demo.sh  ingest_once.sh  integration_regression.sh  integration_smoke_test.sh  live_ingest_once.sh  load_census_boundaries.sh  load_minimal_census_fixtures.sh  load_risk_observation_fixtures.sh  materialize_alerts.sh  quality_check.sh  refresh_materialized_views.sh  release_check.sh  release_fresh_volume_test.sh  repair_alert_function.sh  replay_bad_fixtures.sh  replay_dlq.sh  replay_fixtures.sh  replay_grid_weather_fixtures.sh  replay_wind_fixtures.sh  reset_local.sh  run_compare_dispersion_aq.sh  run_compute_dispersion.sh  run_compute_plume.sh  run_compute_risk.sh  run_match_fire_weather.sh  (+8 more)
tests/: test_alert_events_sql_layout.py  test_alert_fingerprint.py  test_alert_thresholds.py  test_calibration_evidence.py  test_calibration_scripts_syntax.py  test_calibration_sql_layout.py  test_census_config.py  test_compact_parse_errors_db.py  test_compare_dispersion_skip.py  test_digest_formatting.py  test_dlq.py  (+50 more)
(+194 files in other folders)
